--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -77,8 +77,8 @@
                                 <!-- View Profile Button -->
                                 <a href="{% url 'staffdetails' staff.id %}">
                                     <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-                                                                            text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
-                                                                            focus:ring-2 focus:ring-gray-300">
+                                                                text-sm font-medium text-gray-700 bg-white hover:bg-gray-100 focus:outline-none 
+                                                                focus:ring-2 focus:ring-gray-300 hover:text-gray-900 focus:z-10">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                             stroke-width="2">
                                             <path stroke-linecap="round" stroke-linejoin="round"
