--- a/templates/searchresult.html
+++ b/templates/searchresult.html
@@ -63,7 +63,7 @@
                             <div class="flex-1 min-w-0">
                                 <p class="text-lg font-medium text-gray-900 truncate dark:text-white">
                                     {{ staff.first_name.title }}
-                                    {% if staff.middle_name %}
+                                    {% if staff.middle_name.title %}
                                         {{ staff.middle_name.title }}
                                         {% else %}
                                             <span></span>
