updated addstaff.html 11:23am 16/06/2022

--- a/sendmail/templates/staffdeleted.html
+++ b/sendmail/templates/staffdeleted.html
@@ -60,7 +60,7 @@
 
             <!-- Report -->
             <span class="mb-8 md:mb-8 lg:mb-4 text-lg font-bold text-center text-gray-500">
-                has been deleted from the Database.
+                has been deleted from the Database
             </span>
 
 
