views update 12:06pm 16/06/2022

--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -83,6 +83,7 @@
                     <div>
                         <label for="gender" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.gender.label }}</label>
                         {% render_field form.gender class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        <p class="mt-1 text-sm font-medium text-red-600"><em>required</em></p>
                     </div>
                     
                     <!-- Phone Number -->
