--- a/templates/searchresult.html
+++ b/templates/searchresult.html
@@ -110,7 +110,8 @@
 
                 <!-- Buttons -->
                 <div class="inline-flex mt-2 xs:mt-0">
-                    <!-- Previous Button -->
+                    
+                    <!-- Prev Button -->
                     {% if page_obj.has_previous %}
                         <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
                             <button class="inline-flex items-center py-2 px-4 text-sm font-medium text-white bg-gray-800 
