--- a/templates/searchresult.html
+++ b/templates/searchresult.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    <title>{{ title }}</title>
+    <title>Search Result</title>
 {% endblock %}
 
 {% block content %}
@@ -38,9 +38,9 @@
     </div>
     
     <!-- Search Result -->
-    <div class="p-6 lg:p-8 max-w-3xl bg-white rounded-lg md:mb-8 border mx-auto shadow-md min-h-full justify-center">
+    <div class="p-6 lg:p-8 max-w-3xl bg-white rounded-lg md:mb-10 mb-10 border mx-auto shadow-md min-h-full justify-center">
         <div class="flex justify-between items-center mb-4">
-            <h5 class="text-3xl font-bold text-gray-900 dark:text-white">
+            <h5 class="text-2xl md:text-3xl font-bold text-gray-900 dark:text-white">
                 Found {{ count_query }} result(s) for "{{ query }}"
             </h5>
         </div>
@@ -79,9 +79,9 @@
             
                                     <!-- View Profile Button -->
                                     <a href="{% url 'staffdetails' staff.id %}">
-                                        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-                                                                    text-sm font-medium text-gray-700 bg-white hover:bg-gray-100 focus:outline-none 
-                                                                    focus:ring-2 focus:ring-gray-300 hover:text-gray-900 focus:z-10">
+                                        <button type="button" class="inline-flex items-center px-4 py-2 border border-blue-400 rounded-md shadow-sm 
+                                                                    text-sm font-medium text-white bg-blue-400 hover:bg-blue-500 focus:outline-none 
+                                                                    focus:ring-2 focus:ring-offset-2 focus:ring-blue-400 hover:border-blue-500 focus:z-10">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                                 stroke-width="2">
                                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -110,8 +110,9 @@
         {% if is_paginated %}
             <div class="container font-medium text-gray-500 text-md md:text-lg flex flex-col 
                         space-y-4 items-center justify-center mt-8 mb-8 md:mb-12 pagination">
+
                 <!-- Page breadcrumbs -->
-                <span class="page-current mx-4">
+                <span class="page-current">
                     Showing Page <span class="text-gray-600 dark:text-white">{{ page_obj.number }}</span>
                       of <span class="text-gray-600 dark:text-white">{{ page_obj.paginator.num_pages }}</span> Pages
                 </span>
@@ -121,9 +122,9 @@
                     
                     <!-- Prev Button -->
                     {% if page_obj.has_previous %}
-                        <a href="?page={{ page_obj.previous_page_number }}">
+                        <a href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
                             <button class="inline-flex items-center py-2 px-4 text-sm font-medium text-white bg-gray-800 
-                                            rounded-l hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 
+                                            rounded-l hover:bg-gray-600 dark:bg-gray-800 dark:border-gray-700 
                                             dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                                     <span class="inline-flex items-center">
                                         <svg class="mr-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -139,7 +140,7 @@
                     
                     <!-- Next Button -->
                     {% if page_obj.has_next %}
-                        <a href="?page={{ page_obj.next_page_number }}">
+                        <a href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
                             <button class="py-2 px-4 text-sm font-medium text-white 
                                             bg-gray-800 rounded-r border-0 border-l border-gray-700 hover:bg-gray-600 
                                             dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 
