--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -49,6 +49,8 @@
             <div>
                 <h2 class="mb-6 text-center text-3xl font-extrabold underline underline-offset-2 text-gray-900">Add a Staff</h2>
             </div>
+
+            <p class="text-md mt-10 font-medium text-red-600"><em>Fields marked with <span class="text-lg font-medium text-red-600"><em>*</em></span> are required</em></p>
     
             <!-- Form -->
             <form action="" method="POST" enctype="multipart/form-data">
@@ -56,86 +58,84 @@
                 <input type="hidden" name="remember" value="true">
     
                 <!-- Fields -->
-                <div class="grid gap-6 mt-10 md:mt-12 mb-6 lg:grid-cols-2">
+                <div class="grid gap-6 mt-10 md:mt-8 mb-6 lg:grid-cols-2">
                     <input type="hidden" name="remember" value="true">
 
                     <!-- First Name -->
                     <div>
-                        <label for="first_name" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.first_name.label }}</label>
-                        {% render_field form.first_name class+="text-md md:text-md font-medium block w-full p-3 rounded-md border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
-                        <p class="mt-1 text-sm font-medium text-red-600"><em>required</em></p>
+                        <label for="first_name" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.first_name.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.first_name class+="text-md md:text-md font-medium block w-full p-3 rounded-md border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
                     </div>
 
                     <!-- Middle Name -->
                     <div>
-                        <label for="middle_name" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.middle_name.label }}</label>
+                        <label for="middle_name" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.middle_name.label }}<span class="ml-1 text-2xl"></span></label>
                         {% render_field form.middle_name class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
                     </div>
 
                     <!-- Last Name -->
                     <div>
-                        <label for="last_name" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.last_name.label }}</label>
-                        {% render_field form.last_name class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
-                        <p class="mt-1 text-sm font-medium text-red-600"><em>required</em></p>
+                        <label for="last_name" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.last_name.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.last_name class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}  
                     </div>
 
                     <!-- Gender -->
                     <div>
-                        <label for="gender" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.gender.label }}</label>
-                        {% render_field form.gender class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
-                        <p class="mt-1 text-sm font-medium text-red-600"><em>required</em></p>
+                        <label for="gender" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.gender.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.gender class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
                     </div>
                     
                     <!-- Phone Number -->
                     <div>
-                        <label for="phone_number" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.phone_number.label }}</label>
-                        {% render_field form.phone_number class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
-                        <p class="mt-1 text-sm font-medium text-red-600"><em>required</em></p>
+                        <label for="phone_number" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.phone_number.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.phone_number class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
                     </div>
                     
                     <!-- Official Email -->
                     <div>
-                        <label for="email" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.email.label }}</label>
-                        {% render_field form.email class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
-                        <p class="mt-1 text-sm font-medium text-red-600"><em>required</em></p>
+                        <label for="email" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.email.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.email class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
                     </div>
                     
                     <!-- Cadre -->
                     <div>
-                        <label for="cadre" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.cadre.label }}</label>
-                        {% render_field form.cadre class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
-                        <p class="mt-1 text-sm font-medium text-red-600"><em>required</em></p>
+                        <label for="cadre" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.cadre.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.cadre class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
+                    </div>
+                    
+                    <!-- Department -->
+                    <div>
+                        <label for="department" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.department.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.department class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
                     </div>
                     
                     <!-- Level -->
                     <div>
-                        <label for="level" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.level.label }}</label>
-                        {% render_field form.level class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
-                        <p class="mt-1 text-sm font-medium text-red-600"><em>required</em></p>
+                        <label for="level" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.level.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.level class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
                     </div>
                     
                     <!-- Step -->
                     <div>
-                        <label for="step" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.step.label }}</label>
+                        <label for="step" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.step.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
                         {% render_field form.step class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                     
                     <!-- Birth Month -->
                     <div>
-                        <label for="birth_month" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.birth_month.label }}</label>
+                        <label for="birth_month" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.birth_month.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
                         {% render_field form.birth_month class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                     
                     <!-- Birth Day -->
                     <div>
-                        <label for="birth_day" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.birth_day.label }}</label>
-                        {% render_field form.birth_day class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
-                        <p class="mt-1 text-sm font-medium text-red-600"><em>required</em></p>
+                        <label for="birth_day" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.birth_day.label }}<span class="ml-1 text-2xl font-medium text-red-600"><em>*</em></span></label>
+                        {% render_field form.birth_day class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                                                
                     </div>
                         
                     <!-- Profile Picture -->
-                    <div>
-                        <label for="staff_image" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.staff_image.label }}</label>
+                    <div class="w-full">
+                        <label for="staff_image" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.staff_image.label }}<span class="ml-1 text-2xl"></span></label>
                         {% render_field form.staff_image class+="cursor-pointer text-md md:text-md font-medium block rounded-md w-full py-2 px-3 border border-2 border-gray-300 bg-white placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                         <p class="mt-1 text-sm text-gray-500 dark:text-gray-300" id="file_input_help">PNG, JPG or GIF (MAX. 800x800px).</p>
                     </div>
@@ -145,8 +145,8 @@
                 <div class="flex items-center w-full space-x-4">
                     <!-- Add -->
                     <button type="submit" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-3 px-4 border border-transparent 
-                                                text-md font-medium rounded-md text-white bg-indigo-700 hover:bg-indigo-600 focus:outline-none 
-                                                 focus:ring-4 focus:ring-indigo-400">
+                                                text-md font-medium rounded-md text-white bg-blue-700 hover:bg-blue-600 focus:outline-none 
+                                                 focus:ring-4 focus:ring-blue-400">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                             <!-- Heroicon name: user-plus -->
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor">
@@ -158,10 +158,10 @@
                     </button>
 
                     <!-- Clear form -->
-                    <button type="button" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-3 px-4 border border-red-700 
-                                                text-md font-medium rounded-md text-white bg-red-700 hover:bg-red-600 focus:outline-none 
-                                                 focus:ring-4 focus:ring-red-500 hover:border-red-600">
-                        Clear
+                    <button type="reset" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-3 px-4 border border-red-700 
+                                                text-md font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none 
+                                                 focus:ring-4 focus:ring-red-400 hover:border-red-600">
+                        Reset
                     </button>
                 </div>
             </form>
