--- a/sendmail/templates/base.html
+++ b/sendmail/templates/base.html
@@ -22,15 +22,16 @@
 			<div class="container flex flex-wrap justify-between items-center mx-auto">
 	
 				<!-- Logo -->
-				<a href="https://flowbite.com" class="flex items-center">
-					<img src="{% static 'img/mitc-logo-trans.png' %}" class="mr-3 md:h-9 h-6 sm:h-9" alt="Flowbite Logo">
-					<span class="self-center text-xl text-gray-600 font-bold whitespace-nowrap dark:text-white">Staff
+				<a href="https://wcce.org.ng" class="flex items-center">
+					<img src="{% static 'img/mitc-logo-trans.png' %}" class="mr-3 md:h-9 h-8" alt="Flowbite Logo">
+					<span class="self-center text-xl text-gray-700 font-extrabold whitespace-nowrap dark:text-white">Staff
 						Directory</span>
 				</a>
 	
 				<!-- Mobile Menu -->
-				<button data-collapse-toggle="mobile-menu" type="button"
-					class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+				<button data-collapse-toggle="mobile-menu" type="button" onclick="myFunction()"
+					class="inline-flex items-center p-2 ml-3 text-md text-gray-500 border border-2 border-transparent md:hidden
+							hover:text-white hover:bg-blue-700 rounded-md focus:outline-none"
 					aria-controls="mobile-menu" aria-expanded="false">
 					<span class="sr-only">Open main menu</span>
 					<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -49,15 +50,16 @@
 				<div class="hidden w-full md:block md:w-auto" id="mobile-menu">
 	
 					<!-- Nav List -->
-					<ul class="flex flex-col md:flex-row md:space-x-8 md: text-gray-600 md:mt-0 md:text-md md:font-bold">
+					<ul class="flex flex-col md:flex-row md:space-x-8 text-gray-600 md:text-gray-600 mt-4 md:mt-0 md:text-md md:font-bold font-bold">
 	
 						<!-- Home -->
 						<li>
-							<a href="{% url 'index' %}" class="{% active_link 'index' strict=True css_class='text-blue-700' %} block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 
+							<a href="{% url 'index' %}" class="{% active_link 'index' strict=True css_class='text-blue-700 hover:md:border-transparent' %} 
+																block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 
+																md:border-b-2 md:border-transparent md:hover:text-blue-700 md:hover:border-blue-700
 																hover:bg-gray-50 md:hover:bg-transparent md:border-0 
 																md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white 
-																dark:hover:bg-gray-700 dark:hover:text-white 
-																md:dark:hover:bg-transparent dark:border-gray-700">
+																dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
 									<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" viewBox="0 0 20 20" fill="none" stroke="currentColor"
 										stroke-width="2">
@@ -72,10 +74,11 @@
 						<!-- Add a Staff -->
 						<li>
 							<a href="{% url 'addstaff' %}" 
-									class="{% active_link 'addstaff' css_class='text-blue-700' %} block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 
-											hover:bg-gray-50 md:hover:bg-transparent md:border-0 
+									class="{% active_link 'addstaff' css_class='text-blue-700 hover:md:border-transparent' %} 
+											border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 
+											md:border-b-2 md:border-transparent md:hover:text-blue-700 md:hover:border-blue-700
 											md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white 
-											dark:hover:bg-gray-700 dark:hover:text-white 
+											dark:hover:bg-gray-700 dark:hover:text-white block py-2 pr-4 pl-3 text-gray-600
 											md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
 									<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6" fill="none"
@@ -83,16 +86,19 @@
 										<path stroke-linecap="round" stroke-linejoin="round"
 											d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
 									</svg>
-									Add a Staff
+									<span>Add a Staff</span>
 								</span>
 							</a>
 						</li>
 	
 						<!-- Staff list -->
 						<li>
-							<a href="{% url 'stafflist' %}" class="{% active_link 'stafflist' css_class='text-blue-700' %} block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 
-										md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white 
-										md:dark:hover:bg-transparent dark:border-gray-700">
+							<a href="{% url 'stafflist' %}" class="{% active_link 'stafflist' css_class='text-blue-700 hover:md:border-transparent' %} 
+																	block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 
+																	hover:bg-gray-50 md:hover:bg-transparent md:border-0 
+																	md:border-b-2 md:border-transparent md:hover:text-blue-700 md:hover:border-blue-700
+																	md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white 
+																	dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
 	
 									<!-- Staff list icon -->
@@ -108,9 +114,13 @@
 	
 						<!-- Birthdays -->
 						<li>
-							<a href="{% url 'birthday' %}" target="_blank" class="{% active_link 'birthday' css_class='text-blue-700' %} block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 
-										md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white 
-										md:dark:hover:bg-transparent dark:border-gray-700">
+							<a href="{% url 'birthday' %}" target="_blank" class="{% active_link 'birthday' css_class='text-blue-700 hover:md:border-transparent' %} 
+																					block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 
+																					hover:bg-gray-50 md:hover:bg-transparent md:border-0 
+																					md:border-b-2 md:border-transparent md:hover:text-blue-700 md:hover:border-blue-700
+																					md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white 
+																					dark:hover:bg-gray-700 dark:hover:text-white 
+																					md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
 									<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6" fill="none"
 										viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -193,7 +203,7 @@
 					</a>
 				</div>
 				<!-- End of social media icons inner container -->
-				
+
 			</div>
 			<!-- End of social media icons -->
 
@@ -202,5 +212,16 @@
 
 	</footer>
 	<!-- End of footer -->
+
+	<script>
+		function myFunction() {
+		  var x = document.getElementById("mobile-menu");
+		  if (x.style.display === "block") {
+			x.style.display = "none";
+		  } else {
+			x.style.display = "block";
+		  }
+		}
+	</script>
 
 </html>
