--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -126,6 +126,13 @@
                         </a>                   
                     {% endif %}
 
+                    {% for i in paginator.page_range %}
+                        {% if page_obj.number == i %}
+                            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                        {% else %}
+                            <li><a href="?page={{ i }}">{{ i }}</a></li>
+                        {% endif %}
+                    {% endfor %}
                     
                     <!-- Next Button -->
                     {% if page_obj.has_next %}
